--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -86,10 +86,10 @@
                 max-width: 640px;
             }
              .reminder{
-
-                width: 100%;
-                padding: 5px 0;
-                margin-top: 10px;
+                background: #F2F2F2;
+                width: auto;
+                padding: 5px  5px 10px;
+                margin-top: 5px;
                 border-radius: 4px;
             }
             .reminder ul{
@@ -151,6 +151,7 @@
 
     footer{
         height:30px;
-        position:relative;
+        position:fixed;
+        bottom:30px;
         text-align:right;
     }
